--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <body>
     <div class="score"></div>
     <div class="game">
-        <div class="start">Чтобы начать игру нажми сюда</div>
+        <button class="start">Чтобы начать игру нажми сюда</button>
         <div class="gameArea"></div>
     </div>
 
